--- a/Client/src/containers/Auth/Login.scss
+++ b/Client/src/containers/Auth/Login.scss
@@ -1,6 +1,9 @@
 @import '../../styles/common.scss';
 
 .login-wrapper {
+    background-image: url(../../assets/images/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     .form-signin input[type='email'],
     .form-signin input[type='password'],
     .form-signin input[type='text'],
@@ -137,10 +140,25 @@
     }
     .login-error {
         width: 100%;
+        min-height: 40px;
         margin-bottom: 10px;
         text-align: center;
+        background: $common-orange;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+        font-size: 14px;
+        margin: 0 0 16px;
+        position: relative;
         .login-error-message {
-            color: $common-error;
+            position: absolute;
+            top: -50%;
+            left: 26%;
+            color: white;
+            font-size: 13px;
+            font-weight: 400;
+            padding: 10px 5px;
+            transform: translateY(50%);
         }
     }
 
