Handle getallusers api

--- a/Server/src/views/crud.ejs
+++ b/Server/src/views/crud.ejs
@@ -21,7 +21,7 @@
 
 <body>
     <div class="container">
-        <form action="/post-crud" method="POST">
+        <form action='/api/post-crud' method="POST">
             <h1 class="text-center mb-5">CREATE NEW USER</h1>
             <div class="form-row">
                 <div class="form-group col-md-6">
